spacing fix

--- a/src/index.css
+++ b/src/index.css
@@ -502,9 +502,12 @@ button:active {
 @media (max-width: 600px) {
 
     .selection-screen,
-    .game-screen,
     .language-screen {
         padding: 1rem !important;
+    }
+
+    .game-screen {
+        padding: 1rem 1rem 32px 1rem !important;
     }
 
     .selection-header {
